--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,17 @@
   // white-space: nowrap;
 // }
 
+.masthead h3 {
+  text-align: center;
+  font-size: x-large;
+  color: deepskyblue;
+}
+
+.masthead a {
+  font-size: xx-large;
+  color: deepskyblue;
+}
+
 tr td {
   border: none
 }
