--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,13 +33,20 @@
   color: #495E9D;
 }
 
-.masthead a {
+.masthead p {
   font-size: xx-large;
-  color: #495E9D;
+  margin-bottom: 0;
+}
+
+.home {
+  text-align: center;
 }
 
 table {
+  border: none;
   width: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 // tr td {
